// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    Object {
      "backgroundImage": "url(https://placeimg.com/1600/800/arch)",
    }
  }
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={
      Object {
        "backgroundColor": undefined,
        "color": undefined,
      }
    }
  >
    <h1
      className="chakra-heading css-1xdhyk6"
      id="primary-hero"
    >
      Hero Primary
    </h1>
    <div
      className="css-0"
    >
      Example Subtitle
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="hero"
  style={Object {}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={Object {}}
  >
    <div
      className="css-0"
    >
      <img
        alt="Image example"
        className="css-0"
        src="https://placeimg.com/800/400/animals"
      />
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="hero"
  style={Object {}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={Object {}}
  >
    <div
      className="css-0"
    >
      <img
        alt="Image example"
        className="css-0"
        src="https://placeimg.com/800/400/animals"
      />
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary Books and More
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="hero"
  style={Object {}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={Object {}}
  >
    <div
      className="css-0"
    >
      <img
        alt="Image example"
        className="css-0"
        src="https://placeimg.com/800/400/animals"
      />
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary Locations
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 5`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="hero"
  style={Object {}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={Object {}}
  >
    <div
      className="css-0"
    >
      <img
        alt="Image example"
        className="css-0"
        src="https://placeimg.com/800/400/animals"
      />
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="hero"
  style={Object {}}
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={Object {}}
  >
    <div
      className="css-0"
    >
      <img
        alt="Image example"
        className="css-0"
        src="https://placeimg.com/800/400/animals"
      />
    </div>
    <h1
      className="chakra-heading css-1xdhyk6"
      id="secondary-hero"
    >
      Hero Secondary What's On
    </h1>
    <div
      className="css-0"
    >
      Explore our collection of hundreds of online resources and databases. Use our free online content to help with your research, whether it's finding a single article, tracing a family tree, learning a new language, or anything in between.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 7`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={
      Object {
        "backgroundColor": undefined,
        "color": undefined,
      }
    }
  >
    <h1
      className="chakra-heading css-1xdhyk6"
      id="tertiary-hero"
    >
      Hero Tertiary
    </h1>
    <p>
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </p>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 8`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    Object {
      "backgroundImage": "url(https://placeimg.com/2400/800/nature/grayscale)",
    }
  }
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={
      Object {
        "backgroundColor": undefined,
        "color": undefined,
      }
    }
  >
    <div
      className="css-0"
    >
      <img
        alt="Image example"
        className="css-0"
        src="https://placeimg.com/800/400/animals"
      />
    </div>
    <div
      className="css-0"
    >
      <h1
        className="chakra-heading css-1xdhyk6"
        id="campaign-hero"
      >
        Hero Campaign
      </h1>
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 9`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={
      Object {
        "backgroundColor": undefined,
        "color": undefined,
      }
    }
  >
    <div
      className="css-0"
    >
      <img
        alt="Image example"
        className="css-0"
        src="https://placeimg.com/800/400/animals"
      />
    </div>
    <div
      className="css-0"
    >
      With 92 locations across the Bronx, Manhattan, and Staten Island, The New York Public Library is an essential part of neighborhoods across the city. Visit us today.
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 10`] = `
<div
  className="css-16h1ce8"
  data-responsive-background-image={true}
  data-testid="hero"
  style={
    Object {
      "backgroundImage": "url(https://placeimg.com/1600/800/arch)",
    }
  }
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={
      Object {
        "backgroundColor": undefined,
        "color": undefined,
      }
    }
  >
    <h1
      className="chakra-heading css-1xdhyk6"
      id="chakra"
    >
      Hero Primary
    </h1>
    <div
      className="css-0"
    >
      Example Subtitle
    </div>
  </div>
</div>
`;

exports[`Hero Renders the UI snapshot correctly 11`] = `
<div
  className="css-1xdhyk6"
  data-responsive-background-image={true}
  data-testid="props"
  style={
    Object {
      "backgroundImage": "url(https://placeimg.com/1600/800/arch)",
    }
  }
>
  <div
    className="css-0"
    data-testid="hero-content"
    style={
      Object {
        "backgroundColor": undefined,
        "color": undefined,
      }
    }
  >
    <h1
      className="chakra-heading css-1xdhyk6"
      id="props"
    >
      Hero Primary
    </h1>
    <div
      className="css-0"
    >
      Example Subtitle
    </div>
  </div>
</div>
`;
